# x/identity/keeper/msg_server.go
@@ -2,11 +2,9 @@ package keeper
 
 import (
 	"context"
-	"fmt"
 
 	sdk "github.com/cosmos/cosmos-sdk/types"
 	sdkerrors "github.com/cosmos/cosmos-sdk/types/errors"
-	"github.com/sonrhq/core/pkg/wallet"
 	"github.com/sonrhq/core/x/identity/types"
 )
 
@@ -102,46 +100,6 @@ func (k msgServer) DeleteDidDocument(goCtx context.Context, msg *types.MsgDelete
 // ! ||--------------------------------------------------------------------------------||
 // ! ||                              Credential Operations                             ||
 // ! ||--------------------------------------------------------------------------------||
-
-func (k msgServer) RegisterAccount(goCtx context.Context, msg *types.MsgRegisterAccount) (*types.MsgRegisterAccountResponse, error) {
-	ctx := sdk.UnwrapSDKContext(goCtx)
-
-	val, found := k.GetService(ctx, msg.Origin)
-	if found {
-		return nil, sdkerrors.Wrap(types.ErrServiceNotFound, fmt.Sprintf("service %s not found", msg.Origin))
-	}
-
-	cred, err := val.VerifyCreationChallenge(msg.CredentialResponse)
-	if err != nil {
-		return nil, sdkerrors.Wrap(types.ErrWebauthnCredVerify, err.Error())
-	}
-	wallChan := make(chan wallet.Wallet)
-	errChan := make(chan error)
-	go func() {
-		wall, err := wallet.NewWallet(msg.Uuid, 1)
-		if err != nil {
-			errChan <- err
-			return
-		}
-		wallChan <- wall
-	}()
-
-	select {
-	case wall := <-wallChan:
-		doc, vms, err := wall.Assign(cred)
-		if err != nil {
-			return nil, sdkerrors.Wrap(types.ErrWebauthnCredAssign, err.Error())
-		}
-		k.SetDidDocument(ctx, *doc)
-		resolved := doc.ResolveMethods(vms)
-		return &types.MsgRegisterAccountResponse{
-			Did:      doc.Id,
-			Document: resolved,
-		}, nil
-	case err := <-errChan:
-		return nil, sdkerrors.Wrap(types.ErrMpc, err.Error())
-	}
-}
 
 // ! ||--------------------------------------------------------------------------------||
 // ! ||                      Service Message Server Implementation                     ||
